# ROAMFREE

./: .gitignore  Doxyfile  README.md  README.md~
roamfree/: .cproject  .project  CMakeLists.txt  package.xml  tocheck.txt
roamfree/ROAMestimation/: CMakeLists.txt
roamfree/ROAMestimation/PriorEdges/: AllDerivativePriors.h  AllPriors.h  BaseDerivativePriorEdge.h  BasePriorEdge.h  BasePriorEdgeInterface.h  BaseRandomWalkProcessEdge.h  Eucl1DPriorEdge.cpp  Eucl1DPriorEdge.h  Eucl3DDerivativePriorEdge.cpp  Eucl3DDerivativePriorEdge.h  Eucl3DGaussMarkovProcessEdge.cpp  Eucl3DPriorEdge.cpp  Eucl3DPriorEdge.h  Eucl3DRandomWalkProcessEdge.cpp  FHPPriorOnHomogeneousPointEdge.cpp  FHPPriorOnHomogeneousPointEdge.h  Matrix3DPriorEdge.cpp  Matrix3DPriorEdge.h  SE3PriorEdge.cpp  SE3PriorEdge.h
roamfree/ROAMestimation/SpatialIndex/: SpatialIndex.cpp  SpatialIndex.h
roamfree/ROAMestimation/include/ROAMestimation/: AugmentedStateCalculator.h  AugmentedStateJacobianCalculator.h  AutoIDSparseOptimizer.h  BaseEdgeInterface.h  Chi2TestAction.h  ConstantParameter.h  Enums.h  EstimationEdgeCollectInterface.h  EstimationStats.h  FactorGraphFilter.h  FactorGraphFilterFactory.h  FactorGraphFilterImpl.h  GenericCalculator.h  GenericEdge.h  GenericEdgeInterface.h  GenericLinearConstraint.h  GenericLinearConstraintFactory.h  GenericVertex.h  GenericVertexInterface.h  LimitedBandwithEuclideanParameter.h  LinearlyInterpolatedEuclideanParameter.h  MeasurementEdgeMetadata.h  MeasurementEdgeWrapper.h  MeasurementEdgeWrapperImpl.h  OrientationContinuityEdge.h  OriginFrameProperties.h  ParameterBlender.h  ParameterTemporaries.h  ParameterVerticesManager.h  ParameterWrapper.h  ParameterWrapperImpl.h  PoseVertexMetadata.h  PoseVertexWrapper.h  PoseVertexWrapperImpl.h  QuaternionGenericEdge.h  ROAMestimation.h  SE3InterpolationEdge.h  StochasticProcessFactory.h  g2oSolverFactory.h  interfaceTypes.h  (+1 more)
roamfree/ROAMestimation/src/: AutoIDSparseOptimizer.cpp  Chi2TestAction.cpp  ConstantParameter.cpp  FactorGraphFilterFactory.cpp  FactorGraphFilterImpl.cpp  GenericLinearConstraint.cpp  GenericLinearConstraintFactory.cpp  LimitedBandwithEuclideanParameter.cpp  LinearlyInterpolatedEuclideanParameter.cpp  MeasurementEdgeWrapperImpl.cpp  OrientationContinuityEdge.cpp  OriginFrameProperties.cpp  ParameterBlender.cpp  ParameterTemporaries.cpp  ParameterVerticesManager.cpp  ParameterWrapperImpl.cpp  PoseVertexWrapperImpl.cpp  SE3InterpolationEdge.cpp  StochasticProcessFactory.cpp  g2oSolverFactory.cpp
roamfree/ROAMestimation/src/PriorEdges/: Eucl1DGaussMarkovProcessEdge.cpp  Eucl1DPriorEdge.cpp  Eucl1DRandomWalkProcessEdge.cpp  Eucl2DGaussMarkovProcessEdge.cpp  (+7 more)
roamfree/ROAMfunctions/: CMakeLists.txt
roamfree/ROAMfunctions/src/: AbsolutePoseM.cpp  AbsolutePositionM.cpp  AbsoluteVelocityM.cpp  Acceleration.cpp  AccelerationInEarthFrame.cpp  AccelerationInEarthFrameM.cpp  AccelerationM.cpp  AckermannKinematicM.cpp  AckermannKinematicNoInputsM.cpp  AnchoredRectangularObjectFirstM.cpp  AnchoredRectangularObjectM.cpp  AngularVelocity.cpp  AngularVelocityInEarthFrame.cpp  AngularVelocityInEarthFrameM.cpp  AngularVelocityM.cpp  DifferentialDriveKinematicM.cpp  DisplacementM.cpp  Eucl1DV.cpp  Eucl2DV.cpp  Eucl3DV.cpp  Eucl4DV.cpp  FixedFeaturePoseM.cpp  FixedFeaturePositionM.cpp  ForceDynamicModelM.cpp  FramedHomogeneousPointM.cpp  GenericOdometerM.cpp  IMUIntegralDeltaPM.cpp  IMUIntegralDeltaQM.cpp  ImagePlaneProjectionM.cpp  LiDARTieFeaturesM.cpp  Lidar2ImageProjectionTieFeatureM.cpp  LinearVelocityM.cpp  MagParamsV.cpp  Matrix3DV.cpp  PlanarConstraintM.cpp  PlaneDynamicModelM.cpp  PlaneDynamicModelParamsV.cpp  PoseDerivativeM.cpp  QuadDynamicModelM.cpp  QuaternionV.cpp  (+8 more)
roamfree/ROAMimu/: CMakeLists.txt
roamfree/ROAMimu/src/: IMUIntegralHandler.cpp  IMUIntegrator.cpp
roamfree/ROAMlog/: CMakeLists.txt
roamfree/ROAMlog/src/: GraphLogger.cpp  SlotRandomLogger.cpp
roamfree/ROAMmath/: CMakeLists.txt
roamfree/ROAMmath/src/: MathUtils.cpp  SparsePopulator.cpp  fresnel.cpp
roamfree/ROAMtest/: CMakeLists.txt
roamfree/ROAMtest/data/: 20150210_gt.txt  20150210_z_acc.txt  20150210_z_dyn.txt  20150210_z_gps.txt  20150210_z_gyro.txt  20150212_gt.txt  20150212_smalldt_gt.txt  20150212_smalldt_z_dyn.txt  20150212_z_acc.txt  20150212_z_dyn.txt  20150212_z_gps.txt  20150310_z_acc.txt  20150310_z_dyn.txt  20150310_z_gps.txt  20150310_z_gyro.txt  PerfectIMUInEarthFrame_GT.txt  PerfectIMUInEarthFrame_za.txt  PerfectIMUInEarthFrame_zgps.txt  PerfectIMUInEarthFrame_zw.txt  VDMTestZ.txt  hexacopter-imu-gt-header.txt  hexacopter-imu-gt.txt  hexacopter-pose-gt-header.txt  hexacopter-pose-gt.txt
roamfree/ROAMtest/src/: CameraIMUFHPTest.cpp  CameraIMUTest.cpp  IMUGPSFusionTest.cpp  IMUHandlerFusionTest.cpp  PerfectIMUHandlerTest.cpp  PerfectIMUInEarthFrameTest.cpp  PerfectIMUTest.cpp  TestPoseGetters.cpp  TestSE3InterpolationEdge.cpp  VDMFusionTest.cpp
roamfree/ROAMutils/: CMakeLists.txt
roamfree/ROAMutils/src/: StringUtils.cpp
roamfree/ROAMvision/: CMakeLists.txt
roamfree/ROAMvision/src/: EuclideanFeatureHandler.cpp  FHPFeatureHandler.cpp  FHPFeatureHandlerBootstrap.cpp  FHPInitializationStrategy.cpp  FHPTrackDescriptor.cpp  ObservationDescriptor.cpp  RectangularInitialization.cpp  SufficientParallax.cpp  SufficientZChange.cpp  UpdateFeaturePriorAction.cpp
roamfree/g2o/: CMakeLists.txt
roamfree/g2o/cmake_modules/: FindSuiteSparse.cmake
roamfree/g2o/g2o/: CMakeLists.txt
roamfree/g2o/info/: info.xml
roamros/: CMakeLists.txt  package.xml
roamros/cmake/modules/: FindEigen3.cmake
roamros/config/: config.yaml  initial_pose.yaml
roamros/include/: callbacks.h  roamros_config.h  sensor_configuration.h  solver_configuration.h  utils.h
roamros/launch/: roamros.launch
roamros/src/: callbacks.cpp  main.cpp  roamros_config.cpp  sensor_configuration.cpp  solver_configuration.cpp
roamros_msgs/: CMakeLists.txt  package.xml
roamros_msgs/msg/: SingleTrackAckermannOdometry.msg  SingleTrackAckermannOdometryStamped.msg  SingleTrackAckermannOdometryWithCovariance.msg  SingleTrackAckermannOdometryWithCovarianceStamped.msg
(+249 files in other folders)
