<?xml version="1.0"?>
<package>
  <name>roamros</name>
  <version>0.0.0</version>
  <description>The roamros package</description>

  <maintainer email="davideantonio.cucci@polimi.it">Davide A. Cucci</maintainer>

  <license>LGPLv3</license>

  <author email="davideantonio.cucci@polimi.it">Davide Antonio Cucci</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>roamfree</build_depend>
  <build_depend>roamros_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>tf</run_depend>
  <build_depend>roamros_msgs</build_depend>

  <run_depend>message_runtime</run_depend>

</package>
