<?xml version="1.0"?>
<package>
  <name>roamros_msgs</name>
  <version>0.0.0</version>
  <description>messages for the roamros node</description>
  <maintainer email="davideantonio.cucci@mail.polimi.it">Davide A. Cucci</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
 
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>

</package>
